--- a/src/app/components/auth-session/auth-provider/signup/signup.component.html
+++ b/src/app/components/auth-session/auth-provider/signup/signup.component.html
@@ -51,11 +51,11 @@
           </div>  
           <div class="mb-6 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" for="empresa"> Empresa </label>
-            <select class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10" 
+            <select class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
                 id="browsers"
                 formControlName="empresaId">
-                <option value="1" type="number">Empresa 1</option>
-                <option value="2" type="number">Empresa 2</option>
+              <option value="" selected>Seleccione una opcion</option>
+              <option [value]="item.id" *ngFor="let item of companiesList">{{item.nombre}}</option>
             </select>
           </div>
           <div class="mb-6 mt-6">
