--- a/src/app/components/dashboard/dashboard-admin/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-layout/dashboard-layout.component.html
@@ -24,7 +24,7 @@
                   <mat-nav-list class="_sidenav">
                     <a
                       mat-list-item
-                      routerLink="/providerdashboard"
+                      routerLink="/admindashboard/chart-by-categories"
                       [routerLinkActiveOptions]="{ exact: true }"
                       routerLinkActive="bg-gray-200"
                       class="font-semibold text-gray-500 hover:text-primary"
