--- a/src/app/components/dashboard/dashboard-admin/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-layout/dashboard-layout.component.html
@@ -24,6 +24,14 @@
                   <mat-nav-list class="_sidenav">
                     <a
                       mat-list-item
+                      routerLink="/admindashboard/chart-by-categories"
+                      [routerLinkActiveOptions]="{ exact: true }"
+                      routerLinkActive="bg-gray-200"
+                      class="font-semibold text-gray-500 hover:text-primary"
+                      ><mat-icon class="mr-2">dashboard</mat-icon> Estadísticas</a
+                    >
+                    <a
+                      mat-list-item
                       routerLink="/admindashboard/admins"
                       [routerLinkActiveOptions]="{ exact: true }"
                       routerLinkActive="bg-gray-200"
@@ -37,14 +45,6 @@
                       routerLinkActive="bg-gray-200"
                       class="font-semibold text-gray-500 hover:text-primary"
                       ><mat-icon class="mr-2">warning</mat-icon> Lista de Administradores inactivos</a
-                    >
-                    <a
-                      mat-list-item
-                      routerLink="/admindashboard/company"
-                      [routerLinkActiveOptions]="{ exact: true }"
-                      routerLinkActive="bg-gray-200"
-                      class="font-semibold text-gray-500 hover:text-primary"
-                      ><mat-icon class="mr-2">book</mat-icon> Lista de Empresas</a
                     >
                     <a
                       mat-list-item
@@ -66,15 +66,7 @@
                     routerLinkActive="bg-gray-200"
                     class="font-semibold text-gray-500 hover:text-primary"
                     ><mat-icon class="mr-2">list</mat-icon> Lista de productos</a
-                    >
-                    <a
-                    mat-list-item
-                    routerLink="/admindashboard/orders"
-                    routerLinkActive="bg-gray-200"
-                    class="font-semibold text-gray-500 hover:text-primary"
-                    ><mat-icon class="mr-2">motorcycle</mat-icon> Pedidos</a
-                    >
-                    
+                    >                    
                     <a (click)="onLogout()" mat-list-item class="font-semibold text-gray-500 hover:text-primary"><mat-icon class="mr-2">logout</mat-icon> Cerrar sesión</a>
                     <a><img src="assets/logo_trendy.png" alt="Logo" /></a>
                   </mat-nav-list>
