--- a/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
@@ -12,6 +12,10 @@
     </div>
 
     <mat-table #table [dataSource]="dataSource">
+      <ng-container matColumnDef="id">
+        <mat-header-cell *matHeaderCellDef> id </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.idProducto}} </mat-cell>
+      </ng-container>
       <ng-container matColumnDef="Producto">
         <mat-header-cell *matHeaderCellDef> Producto </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.nombreProducto}} </mat-cell>
@@ -40,7 +44,8 @@
                 <mat-icon>stars</mat-icon>
                 <span>Asignar Oferta</span>
               </button>
-              <button mat-menu-item >
+              <button mat-menu-item [routerLink]="['/editproduct/', element.idProducto]">
+
                 <mat-icon>edit</mat-icon>
                 <span>Editar</span>
               </button>
@@ -59,50 +64,5 @@
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20, 40]"></mat-paginator>
-
-    <!--
-    <div *ngIf="view === 'list'" class="table-inside">
-      <div class="flex flex-col border ltLg:responsive">
-        <div class="flex items-center p-4 border-b hover:bg-blue-100">
-          <div class="w-6/12 font-medium"><div class="pl-16 ml-3">Producto</div></div>
-          <div class="w-5/12 font-medium text-center">Precio</div>
-          <div class="w-9/12 font-medium text-center">Stock</div>
-          <div class="w-1/12"></div>
-        </div>
-        <div class="flex items-center p-4 border-b hover:bg-blue-100" *ngFor="let product of products | slice: 0:9">
-          <div class="w-6/12">
-            <a  class="flex hover:text-primary">
-              <h3 class="flex-auto">{{ product.nombreProducto }}</h3>
-            </a>
-          </div>
-          <div class="w-5/12 text-center">Bs. {{product.precio}}</div>
-          <div class="w-2/12">{{product.stock}}</div>
-          <div class="text-right">
-            <button class="action_icon__btn" mat-icon-button [matMenuTriggerFor]="menu">
-              <mat-icon>more_vert</mat-icon>
-            </button>
-            <mat-menu #menu="matMenu" xposition="before">
-              <button mat-menu-item [routerLink]="['/providerdashboard/color-size']">
-                <mat-icon>dialpad</mat-icon>
-                <span>Asignar Características</span>
-              </button>
-              <button mat-menu-item [routerLink]="['/providerdashboard/offers']">
-                <mat-icon>stars</mat-icon>
-                <span>Asignar Oferta</span>
-              </button>
-              <button mat-menu-item >
-                <mat-icon>edit</mat-icon>
-                <span>Editar</span>
-              </button>
-              <button mat-menu-item (click)="mensajeEliminarProducto(product.idProducto)">
-                <mat-icon>delete</mat-icon>
-                <span>Eliminar</span>
-              </button>
-            </mat-menu>
-          </div>
-        </div>
-      </div>
-    </div>
--->
   </div>
 </div>
