--- a/src/app/components/dashboard/dashboard-provider/dashboard-inactive-offers/dashboard-inactive-offers.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-inactive-offers/dashboard-inactive-offers.component.html
@@ -1,12 +1,40 @@
 <div>
 	<div style="text-align: center;">
-	  <h1>OFERTAS INACTIVAS</h1>
+	  <h1>OFERTAS - PRODUCTOS</h1>
 	</div>
 	<div>
 	  <div class="flex justify-between flex-wrap">
-		<h2 class="mb-3 font-medium">LISTA DE OFERTAS INACTIVAS</h2>
+		<h2 class="mb-3 font-medium">LISTA DE OFERTAS - PRODUCTOS INACTIVOS</h2>
 	  </div>
-    </div>  
+    </div> 
+	<div class="table-inside">
+
+
+		<table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)"  class="mat-elevation-z8">
+			<ng-container matColumnDef="id">
+				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by id"> ID </th>
+				<td mat-cell *matCellDef="let element"> {{element.id}} </td>
+		  	</ng-container>
+
+		  	<ng-container matColumnDef="oferta_id">
+				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by oferta_id"> Id Oferta </th>
+				<td mat-cell *matCellDef="let element"> {{element.ofertaId}} </td>
+		  	</ng-container>
+
+		  	<ng-container matColumnDef="producto_id">
+				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by producto_id"> Id Producto </th>
+				<td mat-cell *matCellDef="let element"> {{element.productoId}} </td>
+		  	</ng-container>
+
+		  	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    	  	<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+		  	<tr class="mat-row" *matNoDataRow>
+				<td class="mat-cell" colspan="4">No se encontro "{{input.value}}"</td>
+		  	</tr>
+		</table>
+		<mat-paginator [pageSizeOptions]="[5, 10, 15, 20, 25]" showFirstLastButtons></mat-paginator>
+	</div> 
 </div>
 
 
