--- a/src/app/components/product/editproduct/editproduct.component.html
+++ b/src/app/components/product/editproduct/editproduct.component.html
@@ -51,7 +51,7 @@
               />
           </div>
           
-          <h1 class="text-2xl font-bold">AGREGAR CARACTERISTICAS INICIALES</h1>
+          <h1 class="text-2xl font-bold">CARACTERISTICAS DEL PRODUCTO</h1>
           <form [formGroup]="datosCaracteriticas">
             <div class="mb-4 mt-6">
               <label class="block text-gray-700 text-sm font-semibold mb-2" for="color"> Color </label>
@@ -122,16 +122,13 @@
               />
             </div>
           </form>
-          <div class="mb-6 mt-6">
-            <label class="block text-gray-700 text-sm font-semibold mb-2" for="tipo"> Seleccione fotos </label>
-            <input type="file" (change)="selectFile($event)" name="fotos producto[]" multiple>
-          </div>
+    
           <div class="flex w-full mt-6">
             <button
               class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
               type="submit"
             >
-            Agregar Producto
+            Editar Producto
             </button>
           </div>
         </form>
