--- a/src/app/components/dashboard/dashboard-admin/dashboard-chart-by-cat/dashboard-chart-by-cat.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-chart-by-cat/dashboard-chart-by-cat.component.html
@@ -1,5 +1,82 @@
+<div style="text-align: center;">
+  <h1>PRODUCTOS MAS VENDIDOS POR CATEGORÍAS</h1>
+</div>
 
-    <div style="text-align: center;">
-      <h1>PRODUCTOS MAS VENDIDOS POR CATEGORÍAS</h1>
-    </div>
-  
+<div id="chart">
+  <apx-chart
+    [series]="chartOptions.series"
+    [chart]="chartOptions.chart"
+    [dataLabels]="chartOptions.dataLabels"
+    [plotOptions]="chartOptions.plotOptions"
+    [yaxis]="chartOptions.yaxis"
+    [xaxis]="chartOptions.xaxis"
+    [legend]="chartOptions.legend"
+    [colors]="chartOptions.colors"
+    [grid]="chartOptions.grid"
+  ></apx-chart>
+</div>
+
+<div data-html2canvas-ignore="true">
+  <form [formGroup]="filterForm" (ngSubmit)="aplicarFiltro()">
+
+    <mat-grid-list cols="3" rowHeight="3:1">
+      <mat-grid-tile>
+        <mat-form-field appearance="fill">
+          <mat-label>Choose a date</mat-label>
+          <input matInput [matDatepicker]="picker"
+                 (dateChange)="cambioFecha()"
+                 formControlName="startDate">
+          <!--<mat-hint>MM/DD/YYYY</mat-hint>-->
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <mat-form-field appearance="fill">
+          <mat-label>Choose a date</mat-label>
+          <input matInput [matDatepicker]="picker2"
+                 (dateChange)="cambioFecha()"
+                 formControlName="endDate">
+          <!--<mat-hint>MM/DD/YYYY</mat-hint>-->
+          <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+          <mat-datepicker #picker2></mat-datepicker>
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <div class="ml-4 mt-2 col-span-6 mb-3">
+          <button type="submit" [style.margin-bottom.px]="10"  mat-flat-button color="accent"><mat-icon>search</mat-icon>Realizar Busquedas</button>
+        </div>
+      </mat-grid-tile>
+    </mat-grid-list>
+
+  </form>
+</div>
+
+<div style="text-align: center;">
+  <h1>PRODUCTOS MAS VENDIDOS</h1>
+</div>
+<!--
+<div>
+  <div>
+    <form  [formGroup]="filterForm" (ngSubmit)="aplicarFiltro()">
+      <mat-grid-list cols="2" rowHeight="2:1">
+        <mat-grid-tile>
+          <mat-form-field [style.width.px]=350 appearance="fill">
+            <mat-label>Categorias</mat-label>
+            <mat-select matNativeControl  formControlName="categoria">
+              <mat-option *ngFor="let item of listCategories" [value]="item.id">{{item.categoria}}</mat-option>
+            </mat-select>
+            <mat-hint [ngStyle]="{color: hintColor}">
+              <div *ngIf="validHint">*Debe llenar este campo</div>
+            </mat-hint>
+          </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <button [style.margin-bottom.px]="10" type="submit"  mat-flat-button color="accent"><mat-icon>search</mat-icon>Aplicar Filtros</button>
+
+        </mat-grid-tile>
+      </mat-grid-list>
+
+    </form>
+  </div>
+</div>-->
